Enable virtual threads and add docs links